--- a/suyigou_manager_web/src/main/webapp/admin/brand.html
+++ b/suyigou_manager_web/src/main/webapp/admin/brand.html
@@ -45,7 +45,7 @@
                         <div class="btn-group">
                             <button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal" ng-click="brand2save={}"><i class="fa fa-file-o"></i> 新建</button>
                             <button type="button" class="btn btn-default" title="删除" ng-click="delete()"><i class="fa fa-trash-o"></i> 删除</button>
-                            <button type="button" class="btn btn-default" title="刷新" ng-click="reloadPage()"><i class="fa fa-refresh"></i> 刷新</button>
+                            <button type="button" class="btn btn-default" title="刷新" ng-click="reloadList()"><i class="fa fa-refresh"></i> 刷新</button>
                         </div>
                     </div>
                 </div>
