--- a/suyigou_manager_web/src/main/webapp/admin/index.html
+++ b/suyigou_manager_web/src/main/webapp/admin/index.html
@@ -19,6 +19,12 @@
         <script src="../plugins/jQueryUI/jquery-ui.min.js"></script>
         <script src="../plugins/bootstrap/js/bootstrap.min.js"></script>
 
+        <script type="text/javascript" src="/plugins/angularjs/angular.min.js"></script>
+        <script type="text/javascript" src="/js/commons/base.js"></script>
+        <script type="text/javascript" src="/js/controller/baseController.js"></script>
+        <script type="text/javascript" src="/js/service/sellerService.js"></script>
+        <script type="text/javascript" src="/js/controller/sellerController.js"></script>
+
         <script src="../plugins/adminLTE/js/app.min.js"></script>
 
         <script type="text/javascript">
@@ -28,12 +34,11 @@
                     iframeid.height = document.documentElement.clientHeight;
                 }
             }
-
         </script>
 
     </head>
 
-    <body class="hold-transition skin-green sidebar-mini">
+    <body class="hold-transition skin-green sidebar-mini" ng-app="suyigou" ng-controller="sellerController" ng-init="showName()">
 
         <div class="wrapper">
 
@@ -256,7 +261,7 @@
                             <li class="dropdown user user-menu">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <img src="../img/user2-160x160.jpg" class="user-image" alt="User Image">
-                                    <span class="hidden-xs">测试用户</span>
+                                    <span class="hidden-xs">{{loginName}}</span>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <!-- User image -->
@@ -264,7 +269,7 @@
                                         <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                                         <p>
-                                            测试用户
+                                            {{loginName}}
                                             <small>最后登录 11:20AM</small>
                                         </p>
                                     </li>
@@ -275,7 +280,7 @@
                                             <a href="#" class="btn btn-default btn-flat">修改密码</a>
                                         </div>
                                         <div class="pull-right">
-                                            <a href="#" class="btn btn-default btn-flat">注销</a>
+                                            <a href="/logout" class="btn btn-default btn-flat">注销</a>
                                         </div>
                                     </li>
                                 </ul>
@@ -297,7 +302,7 @@
                             <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
                         </div>
                         <div class="pull-left info">
-                            <p> 测试用户</p>
+                            <p> {{loginName}}</p>
                             <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
                         </div>
                     </div>
