--- a/suyigou_shop_web/src/main/webapp/register.html
+++ b/suyigou_shop_web/src/main/webapp/register.html
@@ -24,127 +24,127 @@
             </div>
             <!--register-->
             <div class="registerArea">
-                <h3>商家入驻申请<span class="go">我有账号，去<a href="shoplogin.html" target="_blank">登陆</a></span></h3>
+                <h3>商家入驻申请<span class="go">我有账号，去<a href="shoplogin.html" target="_self">登陆</a></span></h3>
                 <div class="info">
 
-                    <form class="sui-form form-horizontal">
+                    <form method="post" action="/seller/add.do" class="sui-form form-horizontal" id="registerForm">
 
                         <div class="control-group">
                             <label class="control-label">登陆名（不可修改）：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.sellerId" placeholder="登陆名" class="input-xfat input-xlarge">
+                                <input type="text" name="sellerId" placeholder="登陆名" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">登陆密码：</label>
                             <div class="controls">
-                                <input type="password" ng-model="entity.password" placeholder="登陆密码" class="input-xfat input-xlarge">
+                                <input type="password" name="password" placeholder="登陆密码" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">店铺名称：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.nickName" placeholder="店铺名称" class="input-xfat input-xlarge">
+                                <input type="text" name="nickName" placeholder="店铺名称" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">公司名称：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.name" placeholder="公司名称" class="input-xfat input-xlarge">
+                                <input type="text" name="name" placeholder="公司名称" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">公司电话：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.telephone" placeholder="公司电话" class="input-xfat input-xlarge">
+                                <input type="text" name="telephone" placeholder="公司电话" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">公司详细地址：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.addressDetail" placeholder="公司详细地址" class="input-xfat input-xlarge">
+                                <input type="text" name="addressDetail" placeholder="公司详细地址" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">联系人姓名：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.linkmanName" placeholder="联系人姓名" class="input-xfat input-xlarge">
+                                <input type="text" name="linkmanName" placeholder="联系人姓名" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">联系人QQ：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.linkmanQq" placeholder="联系人QQ" class="input-xfat input-xlarge">
+                                <input type="text" name="linkmanQq" placeholder="联系人QQ" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">联系人手机：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.linkmanMobile" placeholder="联系人手机" class="input-xfat input-xlarge">
+                                <input type="text" name="linkmanMobile" placeholder="联系人手机" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">联系人EMAIL：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.linkmanEmail" placeholder="联系人EMAIL" class="input-xfat input-xlarge">
+                                <input type="text" name="linkmanEmail" placeholder="联系人EMAIL" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">营业执照号：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.licenceNumber" placeholder="营业执照号" class="input-xfat input-xlarge">
+                                <input type="text" name="licenceNumber" placeholder="营业执照号" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">税务登记证号：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.taxNumber" placeholder="税务登记证号" class="input-xfat input-xlarge">
+                                <input type="text" name="taxNumber" placeholder="税务登记证号" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">组织机构代码证：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.orgNumber" placeholder="组织机构代码证" class="input-xfat input-xlarge">
+                                <input type="text" name="orgNumber" placeholder="组织机构代码证" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">法定代表人：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.legalPerson" placeholder="法定代表人" class="input-xfat input-xlarge">
+                                <input type="text" name="legalPerson" placeholder="法定代表人" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">法定代表人身份证号：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.legalPersonCardId" placeholder="法定代表人身份证号" class="input-xfat input-xlarge">
+                                <input type="text" name="legalPersonCardId" placeholder="法定代表人身份证号" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">开户行名称：</label>
                             <div class="controls">
-                                <input type="text" ng-model="entity.bankUser" ng-model="bankName" placeholder="开户行名称" class="input-xfat input-xlarge">
+                                <input type="text" name="bankUser" name="bankName" placeholder="开户行名称" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
                         <div class="control-group">
                             <label class="control-label">开户行支行：</label>
                             <div class="controls">
-                                <input type="text" ng-model="bankName" placeholder="开户行支行" class="input-xfat input-xlarge">
+                                <input type="text" name="bankName" placeholder="开户行支行" class="input-xfat input-xlarge">
                             </div>
                         </div>
 
@@ -158,7 +158,7 @@
                         <div class="control-group">
                             <label class="control-label"></label>
                             <div class="controls btn-reg">
-                                <a class="sui-btn btn-block btn-xlarge btn-danger" target="_blank" ng-click="save()">申请入驻</a>
+                                <a class="sui-btn btn-block btn-xlarge btn-danger" target="_self" ng-click="save()" onclick="document:registerForm.submit()">申请入驻</a>
                             </div>
                         </div>
                     </form>
