--- a/suyigou_shop_web/src/main/webapp/shoplogin.html
+++ b/suyigou_shop_web/src/main/webapp/shoplogin.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/webbase.css" />
     <link rel="stylesheet" type="text/css" href="css/pages-shoplogin.css" />
+
 </head>
 
 <body>
@@ -41,19 +42,19 @@
 							<img src="img/wx_cz.jpg" />
 						</div>
 						<div id="profile" class="tab-pane  active">
-							<form class="sui-form">
+							<form class="sui-form" method="post" action="/login" id="loginForm">
 								<div class="input-prepend"><span class="add-on loginname"></span>
-									<input id="prependedInput" type="text" placeholder="邮箱/用户名/手机号" class="span2 input-xfat">
+									<input id="prependedInput" type="text" name="username" placeholder="邮箱/用户名/手机号" class="span2 input-xfat">
 								</div>
 								<div class="input-prepend"><span class="add-on loginpwd"></span>
-									<input id="prependedInput" type="password" placeholder="请输入密码" class="span2 input-xfat">
+									<input id="prependedInput" type="password" name="password" placeholder="请输入密码" class="span2 input-xfat">
 								</div>
 								<div class="setting">
 									<label class="checkbox inline"><input name="m1" type="checkbox" value="2" checked="">自动登录</label>
 									<span class="forget">忘记密码？</span>
 								</div>
 								<div class="logined">
-									<a class="sui-btn btn-block btn-xlarge btn-danger" href="admin/index.html" target="_blank">登&nbsp;&nbsp;录</a>
+									<a class="sui-btn btn-block btn-xlarge btn-danger" onclick="document:loginForm.submit()" target="_self">登&nbsp;&nbsp;录</a>
 								</div>
 							</form>
 							<div class="otherlogin">
@@ -65,7 +66,7 @@
 										<li><img src="img/weixin.png" /></li>
 									</ul>
 								</div>
-								<span class="register"><a href="register.html" target="_blank">立即注册</a></span>
+								<span class="register"><a href="register.html" target="_self">立即注册</a></span>
 							</div>
 						</div>
 					</div>
@@ -92,10 +93,10 @@
 		</div>
 	</div>
 
-<script type="text/javascript" src="js/plugins/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="js/plugins/jquery.easing/jquery.easing.min.js"></script>
-<script type="text/javascript" src="js/plugins/sui/sui.min.js"></script>
-<script type="text/javascript" src="js/plugins/jquery-placeholder/jquery.placeholder.min.js"></script>
+<script type="text/javascript" src="/plugins/plugins/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="/plugins/jquery.easing/jquery.easing.min.js"></script>
+<script type="text/javascript" src="/plugins/sui/sui.min.js"></script>
+<script type="text/javascript" src="/plugins/jquery-placeholder/jquery.placeholder.min.js"></script>
 <script type="text/javascript" src="js/pages/shoplogin.js"></script>
 </body>
 
