day04-after 完成所有功能 1.商家登录和安全控制 2.运营商登录和安全控制 3.商家入驻申请 4.运行商审核

--- a/suyigou_shop_web/src/main/webapp/admin/index.html
+++ b/suyigou_shop_web/src/main/webapp/admin/index.html
@@ -20,8 +20,9 @@
 
         <script type="text/javascript" src="/plugins/angularjs/angular.min.js"></script>
         <script type="text/javascript" src="/js/commons/base.js"></script>
-        <script type="text/javascript" src="/js/service/loginService.js"></script>
-        <script type="text/javascript" src="/js/controller/loginController.js"></script>
+        <script type="text/javascript" src="/js/controller/baseController.js"></script>
+        <script type="text/javascript" src="/js/service/sellerService.js"></script>
+        <script type="text/javascript" src="/js/controller/sellerController.js"></script>
 
         <script src="/plugins/adminLTE/js/app.min.js"></script>
 
@@ -39,7 +40,7 @@
 
     </head>
 
-    <body class="hold-transition skin-blue sidebar-mini" ng-app="suyigou" ng-controller="loginController" ng-init="showName()">
+    <body class="hold-transition skin-blue sidebar-mini" ng-app="suyigou" ng-controller="sellerController" ng-init="loginName()">
 
         <div class="wrapper">
 
