--- a/suyigou_manager_web/src/main/webapp/login.html
+++ b/suyigou_manager_web/src/main/webapp/login.html
@@ -6,11 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
         <title>速易购运营商运营管理后台</title>
-        <link rel="icon" href="../assets/img/favicon.ico">
+        <link rel="icon" href="/img/assets/img/favicon.ico">
 
 
-        <link rel="stylesheet" type="text/css" href="css/webbase.css"/>
-        <link rel="stylesheet" type="text/css" href="css/pages-login-manage.css"/>
+        <link rel="stylesheet" type="text/css" href="/css/webbase.css"/>
+        <link rel="stylesheet" type="text/css" href="/css/pages-login-manage.css"/>
     </head>
 
     <body>
