day05-after 完成所有功能 1.商品录入中的简单录入 2.富文本编辑 3.图片上传FastDFS =============================================== TODO: 2018/9/18 11:02 mybatis的映射有问题，返回结果不对

--- a/suyigou_manager_web/src/main/webapp/admin/type_template.html
+++ b/suyigou_manager_web/src/main/webapp/admin/type_template.html
@@ -87,7 +87,7 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="entity in list">
-                            <td><input type="checkbox" ng-click="changeDelList($event,entity.id)"></td>{{delList}}
+                            <td><input type="checkbox" ng-click="changeDelList($event,entity.id)"></td>
                             <td>{{entity.id}}</td>
                             <td>{{entity.name}}</td>
                             <td>{{jsonToString(entity.brandIds,"text")}}</td>
