--- a/suyigou_shop_web/src/main/webapp/admin/goods_edit.html
+++ b/suyigou_shop_web/src/main/webapp/admin/goods_edit.html
@@ -10,22 +10,24 @@
         <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
         <meta http-equiv="Content-Type" content="multipart/form-data; charset=utf-8">
 
-        <link rel="stylesheet" href="../plugins/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="../plugins/adminLTE/css/AdminLTE.css">
-        <link rel="stylesheet" href="../plugins/adminLTE/css/skins/_all-skins.min.css">
-        <link rel="stylesheet" href="../css/style.css">
-        <script src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
-        <script src="../plugins/bootstrap/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/plugins/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/plugins/adminLTE/css/AdminLTE.css">
+        <link rel="stylesheet" href="/plugins/adminLTE/css/skins/_all-skins.min.css">
+        <link rel="stylesheet" href="/css/style.css">
+        <script src="/plugins/jQuery/jquery-2.2.3.min.js"></script>
+        <script src="/plugins/bootstrap/js/bootstrap.min.js"></script>
 
         <!-- 富文本编辑器 -->
-        <link rel="stylesheet" href="../plugins/kindeditor/themes/default/default.css"/>
-        <script charset="utf-8" src="../plugins/kindeditor/kindeditor-min.js"></script>
-        <script charset="utf-8" src="../plugins/kindeditor/lang/zh_CN.js"></script>
+        <link rel="stylesheet" href="/plugins/kindeditor/themes/default/default.css"/>
+        <script charset="utf-8" src="/plugins/kindeditor/kindeditor-min.js"></script>
+        <script charset="utf-8" src="/plugins/kindeditor/lang/zh_CN.js"></script>
 
         <script src="/plugins/angularjs/angular.min.js"></script>
         <script src="/js/commons/base.js"></script>
         <script src="/js/service/goodsService.js"></script>
         <script src="/js/service/uploadService.js"></script>
+        <script src="/js/service/itemCatService.js"></script>
+        <script src="/js/service/typeTemplateService.js"></script>
         <script src="/js/controller/baseController.js"></script>
         <script src="/js/controller/goodsController.js"></script>
 
@@ -40,7 +42,7 @@
 
     </head>
 
-    <body class="hold-transition skin-red sidebar-mini" ng-app="suyigou" ng-controller="goodsController">
+    <body class="hold-transition skin-red sidebar-mini" ng-app="suyigou" ng-controller="goodsController" ng-init="findItemCatList1()">
 
         <!-- 正文区域 -->
         <section class="content">
@@ -79,17 +81,17 @@
                                     <table>
                                         <tr>
                                             <td>
-                                                <select class="form-control">
+                                                <select class="form-control" ng-model="entity.goods.category1Id" ng-options="itemCat.id as itemCat.name for itemCat in itemCatList_1">
                                                 </select>
                                             </td>
                                             <td>
-                                                <select class="form-control select-sm"></select>
+                                                <select class="form-control select-sm" ng-model="entity.goods.category2_id" ng-options="itemCat.id as itemCat.name for itemCat in itemCatList_2"></select>
                                             </td>
                                             <td>
-                                                <select class="form-control select-sm"></select>
+                                                <select class="form-control select-sm" ng-model="entity.goods.category3_id" ng-options="itemCat.id as itemCat.name for itemCat in itemCatList_3"></select>
                                             </td>
                                             <td>
-                                                模板ID:19
+                                                模板ID:{{entity.goods.typeTemplateId}}
                                             </td>
                                         </tr>
                                     </table>
@@ -104,7 +106,7 @@
 
                                 <div class="col-md-2 title">品牌</div>
                                 <div class="col-md-10 data">
-                                    <select class="form-control"></select>
+                                    <select class="form-control" ng-model="entity.goods.brandId" ng-options="brand.id as brand.text for brand in typeTemplate.brandList"></select>
                                 </div>
 
                                 <div class="col-md-2 title">副标题</div>
@@ -179,16 +181,10 @@
                         <!--扩展属性-->
                         <div class="tab-pane" id="customAttribute">
                             <div class="row data-type">
-                                <div>
-                                    <div class="col-md-2 title">扩展属性1</div>
+                                <div ng-repeat="pojo in entity.goodsDesc.customAttributeItems">
+                                    <div class="col-md-2 title">{{pojo.text}}</div>
                                     <div class="col-md-10 data">
-                                        <input class="form-control" placeholder="扩展属性1">
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="col-md-2 title">扩展属性2</div>
-                                    <div class="col-md-10 data">
-                                        <input class="form-control" placeholder="扩展属性2">
+                                        <input class="form-control" ng-model="pojo.value" placeholder={{pojo.text}}>
                                     </div>
                                 </div>
                             </div>
@@ -199,45 +195,21 @@
                             <div class="row data-type">
                                 <div class="col-md-2 title">是否启用规格</div>
                                 <div class="col-md-10 data">
-                                    <input type="checkbox">
+                                    <input type="checkbox" ng-model="entity.goods.isEnableSpec" ng-true-value="1" ng-false-value="0">
                                 </div>
                             </div>
                             <p>
 
-                            <div>
+                            <div ng-if="entity.goods.isEnableSpec == 1">
 
                                 <div class="row data-type">
 
-                                    <div>
-                                        <div class="col-md-2 title">屏幕尺寸</div>
+                                    <div ng-repeat="spec in specList">
+                                        <div class="col-md-2 title">{{spec.text}}</div>
                                         <div class="col-md-10 data">
-					                               
-					                            <span>
-					                            	<input type="checkbox">4.0
+					                            <span ng-repeat="option in spec.optionList">
+					                            	<input type="checkbox" ng-click="changeSpecOption($event,spec.text,option.optionName);createItemList()">{{option.optionName}}
 					                            </span>
-                                            <span>
-					                            	<input type="checkbox">4.5
-					                            </span>
-                                            <span>
-					                            	<input type="checkbox">5.0
-					                            </span>
-
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="col-md-2 title">网络制式</div>
-                                        <div class="col-md-10 data">
-					                               
-					                            <span>
-					                            	<input type="checkbox">2G
-					                            </span>
-                                            <span>
-					                            	<input type="checkbox">3G
-					                            </span>
-                                            <span>
-					                            	<input type="checkbox">4G
-					                            </span>
-
                                         </div>
                                     </div>
 
@@ -248,8 +220,9 @@
                                     <table class="table table-bordered table-striped table-hover dataTable">
                                         <thead>
                                             <tr>
-                                                <th class="sorting">屏幕尺寸</th>
-                                                <th class="sorting">网络制式</th>
+                                                <th class="sorting" ng-repeat="specification in entity.goodsDesc.specificationItems">
+                                                    {{specification.attributeName}}
+                                                </th>
                                                 <th class="sorting">价格</th>
                                                 <th class="sorting">库存</th>
                                                 <th class="sorting">是否启用</th>
@@ -257,87 +230,23 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <td>
-                                                    4.0
+                                            <tr ng-repeat="item in entity.itemList">
+                                                <td ng-repeat="specification in entity.goodsDesc.specificationItems">
+                                                    {{item.spec[specification.attributeName]}}
                                                 </td>
                                                 <td>
-                                                    3G
+                                                    <input class="form-control" placeholder="价格" ng-model="item.price">
                                                 </td>
                                                 <td>
-                                                    <input class="form-control" placeholder="价格">
+                                                    <input class="form-control" placeholder="库存数量" ng-model="item.stockCount">
                                                 </td>
                                                 <td>
-                                                    <input class="form-control" placeholder="库存数量">
+                                                    <input type="checkbox"  ng-model="pojo.status" ng-true-value="1" ng-false-value="0">
                                                 </td>
                                                 <td>
-                                                    <input type="checkbox">
-                                                </td>
-                                                <td>
-                                                    <input type="checkbox">
+                                                    <input type="checkbox"  ng-model="pojo.isDefault" ng-true-value="1" ng-false-value="0">
                                                 </td>
                                             </tr>
-                                            <tr>
-                                                <td>
-                                                    4.0
-                                                </td>
-                                                <td>
-                                                    4G
-                                                </td>
-                                                <td>
-                                                    <input class="form-control" placeholder="价格">
-                                                </td>
-                                                <td>
-                                                    <input class="form-control" placeholder="库存数量">
-                                                </td>
-                                                <td>
-                                                    <input type="checkbox">
-                                                </td>
-                                                <td>
-                                                    <input type="checkbox">
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    5.0
-                                                </td>
-                                                <td>
-                                                    3G
-                                                </td>
-                                                <td>
-                                                    <input class="form-control" placeholder="价格">
-                                                </td>
-                                                <td>
-                                                    <input class="form-control" placeholder="库存数量">
-                                                </td>
-                                                <td>
-                                                    <input type="checkbox">
-                                                </td>
-                                                <td>
-                                                    <input type="checkbox">
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    5.0
-                                                </td>
-                                                <td>
-                                                    4G
-                                                </td>
-                                                <td>
-                                                    <input class="form-control" placeholder="价格">
-                                                </td>
-                                                <td>
-                                                    <input class="form-control" placeholder="库存数量">
-                                                </td>
-                                                <td>
-                                                    <input type="checkbox">
-                                                </td>
-                                                <td>
-                                                    <input type="checkbox">
-                                                </td>
-                                            </tr>
-
                                         </tbody>
                                     </table>
 
@@ -388,8 +297,7 @@
                                                     上传
                                                 </button>
                                             </td>
-                                            <td>
-
+                                            <td ng-if="image_entity.url">
                                                 <img src="{{image_entity.url}}" width="200px" height="200px">
                                             </td>
                                         </tr>
