--- a/suyigou_manager_web/src/main/webapp/admin/goods.html
+++ b/suyigou_manager_web/src/main/webapp/admin/goods.html
@@ -81,7 +81,7 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="entity in list">
-                            <td><input type="checkbox" ng-click="changeDelList($event,entity.id)"></td>
+                            <td><input type="checkbox" ng-click="changeDelList($event,entity.id)" class="select_box"></td>
                             <td>{{entity.id}}</td>
                             <td>{{entity.goodsName}}</td>
                             <td>{{entity.price}}</td>
